# prompt_mixer.exe

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.e2e.json  tsconfig.json  vite.config.ts  wdio.conf.ts
.github/workflows/: boost-app-release.yml
assets/: index.html
e2e/: README.md  app.spec.ts  navigation.spec.ts  run-e2e.sh
reference/design/: index.html
spec/: core.md  style.md
src/: App.tsx  global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: chat.rs  llm.rs  messages.rs  mod.rs  presets.rs  settings.rs
src/components/chat/: ChatArea.tsx  ChatInput.tsx  ChatItem.tsx  EmptyState.tsx  MessageBubble.tsx  Sidebar.tsx
src/components/layout/: CRTEffect.tsx  FunctionBar.tsx  TopMenu.css  TopMenu.tsx
src/components/mixer/: AnchorForm.tsx  ConnectionIndicator.tsx  MixerCanvas.tsx  MixerControls.tsx  MixerStatus.tsx  PresetsView.tsx  PromptMixer.tsx  ValueDisplay.tsx
src/components/settings/: SettingsModal.tsx
src/components/ui/: Checkbox.tsx  ErrorBoundary.tsx  IconRenderer.tsx  Modal.tsx  ModelSelector.tsx  Toast.tsx
src/hooks/: useKeyboardShortcuts.ts
src/layouts/: AppLayout.tsx
src/lib/: constants.ts  tauri.ts  timestamps.ts  types.ts  utils.ts
src/lib/canvas/: anchors.ts  animation.ts  ascii-art.ts  icons.ts  (+4 more)
src/pages/: PresetsPage.tsx  SettingsPage.tsx  WelcomePage.tsx
src/stores/: chatStore.ts  mixerStore.ts  settingsStore.ts
src/styles/: mixer.css
